--- a/views/regi.ejs
+++ b/views/regi.ejs
@@ -109,24 +109,20 @@ body
   
 <section id="nav-bar">
 	<nav class="navbar navbar-expand-lg navbar-light ">
-  <a class="navbar-brand" href="indexH"><img src="https://media.giphy.com/media/8kERJ466SJRKpaUf5S/giphy.gif" alt="logo" id="logo" ></a>
+  <a class="navbar-brand" href=""><img src="https://media.giphy.com/media/8kERJ466SJRKpaUf5S/giphy.gif" alt="logo" id="logo" ></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item ">
-        <a class="nav-link" href="indexH"><b><pre><font color="white">Home	</pre></font></b></a>
-      </li>
+      
       <li class="nav-item">
         <a class="nav-link" href="login_1"><b><pre><font color="white">Login 	</font></pre></b></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="regi"><b><pre><font color="white">SignUp 	</font></pre></b></a>
       </li>
-       <li class="nav-item">
-        <a class="nav-link" href="#ABout Us"><b><pre><font color="white">About Us</font></pre></b></a>
-      </li>
+   
      
     </ul>
   </div>
