--- a/views/indexH.ejs
+++ b/views/indexH.ejs
@@ -82,7 +82,7 @@
 				<a href="target_snake"><li class="mix color-1 check1 radio2 option3"><div class="textWithBlurredBg"><img src="img/sanke.jpg" alt="Image 1"><h1>Snake II Game</h1></div></li>
           <a href="target"><li class="mix color-2 check2 radio2 option2"><div class="textWithBlurredBg"><img src="img/space.png" alt="Image 2"><h1>Space Invaders</h1></div></li>
           <a href="target_rex"><li class="mix color-1 check3 radio3 option1"><div class="textWithBlurredBg"><img src="img/dino.png" alt="Image 3"><h1>Offline Dino Game</h1></div></li>
-          <a href="target_hex.><li class="mix color-1 check3 radio2 option4"><div class="textWithBlurredBg"><img src="img/race.jpg" alt="Image 4"><h1>Futuristic Racing 4</h1></div></li>
+          <a href="target_hex"><li class="mix color-1 check3 radio2 option4"><div class="textWithBlurredBg"><img src="img/race.jpg" alt="Image 4"><h1>Futuristic Racing 4</h1></div></li>
           <a href="target_flappy"><li class="mix color-1 check1 radio3 option2"><div class="textWithBlurredBg"><img src="img/flappy.png" alt="Image 5"><h1>Flappy Bird</h1></div></li>
           <a href="target_type"><li class="mix color-2 check2 radio3 option3"><div class="textWithBlurredBg"><img src="img/type.jpg" alt="Image 6"><h1>Type Master</h1></div></li>
           <a href="target_bounce"><li class="mix color-2 check2 radio2 option1"><div class="textWithBlurredBg"><img src="img/arka.png" alt="Image 7"><h1>Arkanoid Bounce</h1></div></li>
