--- a/views/index_regi.ejs
+++ b/views/index_regi.ejs
@@ -29,7 +29,7 @@
 
         <div class="form-group">
 
-		<div class="col-xs-6"><input type="text" class="form-control" name="email" placeholder="email" required="required"></div>
+		<div class="col-xs-6"><input type="text" class="form-control" name="username" placeholder="email" required="required"></div>
 
 
 
