--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,9 +159,11 @@ height: 100px;
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="indexH"><b><pre><font color="white">Home	</pre></font></b></a>
+          <a class="nav-link" ><b><pre><font color="white"> Welcome <br> <%= variable %></pre></font></b></a>
         </li>
-
+        <li class="nav-item ">
+          <a class="nav-link" href="index"><b><pre><font color="white">Home	</pre></font></b></a>
+        </li>
          <li class="nav-item">
           <a class="nav-link" href="#myDIV"><b><pre><font color="white">About Us</font></pre></b></a>
         </li>
