--- a/views/index_regi.ejs
+++ b/views/index_regi.ejs
@@ -31,7 +31,9 @@
 
 		<div class="col-xs-6"><input type="text" class="form-control" name="username" placeholder="email" required="required"></div>
 
-
+		<div class="col-xs-6">
+			<input type="text" class="form-control" name="variable" placeholder="username" required="required">
+		</div>
 
 
         	
