few tweaks in register page

--- a/public/css/style_regi.css
+++ b/public/css/style_regi.css
@@ -1,6 +1,6 @@
 body
 {
-	
+	Overflow-y:hidden ;
 	margin:0;
 	padding:0;
 	background:url("  https://thumbs.gfycat.com/VastIdioticHerculesbeetle-size_restricted.gif");
